// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`~client/components/Audiobook renders real data without exploding 1`] = `
<div>
  <div
    style="background-image: url(/cover/5e5677d71bdc2ae76344968c);"
    tabindex="0"
  >
    <div>
      <h3>
        <strong>
          The Echo Wife
        </strong>
         (2021)
      </h3>
      <p>
        644:50:32
        <br />
        by
         
        Naomi
         
        Alderman
      </p>
      <a
        href="/downloads/the-echo-wife.m4b"
      >
        Download
      </a>
    </div>
  </div>
</div>
`;

exports[`~client/components/Audiobook renders without exploding 1`] = `
<div>
  <div
    style="background-image: url(/cover/asdifpowaerew);"
    tabindex="0"
  >
    <div>
      <h3>
        <strong>
          The Power
        </strong>
         (2017)
      </h3>
      <p>
        8923:05:41
        <br />
        by
         
        Naomi
         
        Alderman
      </p>
      <a
        href="/downloads/the-power.m4b"
      >
        Download
      </a>
    </div>
  </div>
</div>
`;
